starting on service connecting to mLab

--- a/myWorkouts/src/pages/add-workout/add-workout.html
+++ b/myWorkouts/src/pages/add-workout/add-workout.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Add Workout
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    About Page
+    Add Workout
 </ion-content>
