--- a/myWorkouts/src/pages/workouts/workouts.html
+++ b/myWorkouts/src/pages/workouts/workouts.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Workouts
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    About Page
+    Workouts
 </ion-content>
